<resources>

    <string name="app_name">MoviesDirector</string>

    <!--Splash screen-->
    <string name="license_2022">copywriting 2022</string>
    <string name="logo_init">logo_tela_inicial</string>
    <string name="movies">Movies</string>
    <string name="director">Director</string>
    <string name="content_logo_app">Imagem da logo do aplicativo</string>
    <string name="content_text_license">texto de licença: copywriting 2022</string>
    <string name="content_movies">Texto escrito: Movies</string>
    <string name="content_director">texto escrito: Director</string>


    <!--screen list movies-->
    <string name="name_movies_list">XXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="lancamento">Lançamento:</string>
    <string name="punctuation">Pontuação</string>
    <string name="know_more">Saiba mais</string>
    <string name="Details_movies_list">de Nathan.</string>
    <string name="content_banner_movies_list">Banner com a imagem do filme na tela detalhes</string>
    <string name="content_name_movies_list">Nome do filme</string>
    <string name="content_lancamento">data de lançamento:</string>
    <string name="content_punctuation">Pontuação do filme</string>
    <string name="content_button_know_more">Botão saiba mais</string>
    <string name="content_Details_movies_list">Contém a descrição do filme.</string>


    <!--Screen details-->
    <string name="name_movies_details">XXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="data_de_lancamento">Data de lançamento:</string>
    <string name="data">2022/22/22</string>
    <string name="popularity">Popularidade:</string>
    <string name="nota">Nota:</string>
    <string name="Details_movies_details">de Nathan.</string>
    <string name="button_watch_now">Assistir agora !</string>
    <string name="genero">-------</string>
    <string name="content_banner_movies_details">Banner com a imagem do filme na tela detalhes</string>
    <string name="content_call_movie">Chamada para o filme</string>
    <string name="content_genres_one">Gênero do filme um</string>
    <string name="content_genres_two">Gênero do filme two</string>
    <string name="content_genres_three">Gênero do filme three</string>
    <string name="content_name_movies_details">Nome do filme</string>
    <string name="content_date_details">Descrição com a data de lançamento:</string>
    <string name="content_popularity_details">Descrição com a popularidade do filme</string>
    <string name="content_nota_details">Descrição com a nota classsificatória do filme:</string>
    <string name="content_descrição_name_movies_details">Descrição</string>
    <string name="content_Details_movies_details">Contém a descrição do filme.</string>
    <string name="content_button_watch_now">Botão para assistir agora !</string>


    <!--Screen about and menu-->
    <string name="text_sobre">O MoviesDirector indexa conteúdo encontrado na web automaticamente usando ajuda de APIs publicas do TMDB. O uso do MoviesDirector é totalmente responsabilidade do usuário. A distribuição de filmes é da plataforma TMDB. Qualquer violação de direitos autorais, entre em contato com o distribuidor. Em caso de dúvidas ou reclamações sobre conteúdo, funcionalidade do site, anúncios entre outros, entre em contato com a equipe de suporte do MoviesDirector pelo email: MoviesDirector@Teste.com</string>
    <string name="screen_about">Você já está na tela sobre</string>
    <string name="ib_menu">ícone de menu</string>
    <string name="img_barra">img_barra</string>
    <string name="msg_error">Desculpe, ocorreu um erro ao consultar</string>
    <string name="about">Sobre o aplicativo</string>
    <string name="netflix">Netflix</string>
    <string name="content_descricao">Descrição da mensagem sobre o aplicativo:O MoviesDirector indexa conteúdo encontrado na web automaticamente usando ajuda de APIs publicas do TMDB. O uso do MoviesDirector é totalmente responsabilidade do usuário. A distribuição de filmes é da plataforma TMDB. Qualquer violação de direitos autorais, entre em contato com o distribuidor. Em caso de dúvidas ou reclamações sobre conteúdo, funcionalidade do site, anúncios entre outros, entre em contato com a equipe de suporte do MoviesDirector pelo email: MoviesDirector@Teste.com</string>
    <string name="call_title">A chamada do título!</string>
    <string name="erro_url_watch">Desculpe este filme não tem uma URL de destino</string>
    <string name="generos_error">Este filme só tem 2 ou menos gêneros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
