<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">


        <include
            android:id="@+id/includeDetails"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_backdrop_path"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_banner_movies_details"
            android:scaleType="centerCrop"
            android:src="@drawable/img_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeDetails" />

        <TextView
            android:id="@+id/title_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_name_movies_details"
            android:fontFamily="@font/font_text_alice"
            android:paddingHorizontal="@dimen/padding"
            android:text="@string/name_movies_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_backdrop_path" />


        <TextView
            android:id="@+id/text_tag_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_call_movie"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/call_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_movies" />

        <TextView
            android:id="@+id/text_genres_one"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_genres_one"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/genero"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tag_line" />

        <TextView
            android:id="@+id/text_genres_two"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_genres_two"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/genero"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_genres_three"
            app:layout_constraintStart_toEndOf="@+id/text_genres_one"
            app:layout_constraintTop_toBottomOf="@+id/text_tag_line" />

        <TextView
            android:id="@+id/text_genres_three"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_genres_three"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/genero"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tag_line" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/content_date_details"
            android:fontFamily="@font/font_text_alice"
            android:paddingHorizontal="@dimen/padding"
            android:text="@string/data_de_lancamento"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_genres_two" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_date_details"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/data"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_popularity_details"
            android:fontFamily="@font/font_text_alice"
            android:paddingHorizontal="@dimen/padding"
            android:text="@string/popularity"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_popularity_details"
            android:text="@string/popularity"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_nota_details"
            android:fontFamily="@font/font_text_alice"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="8dp"
            android:text="@string/nota"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <RatingBar
            android:id="@+id/vote_average"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:numStars="10"
            android:progressBackgroundTint="@color/black"
            android:progressTint="@color/red_logo"
            android:rating="4.5"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:secondaryProgressTint="@color/red_logo"
            android:stepSize="0.5"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_descrição_name_movies_details"
            android:fontFamily="@font/font_text_alice"
            android:padding="@dimen/padding"
            android:text="@string/content_descrição_name_movies_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView_details_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_Details_movies_details"
            android:fontFamily="@font/font_text_alice"
            android:padding="@dimen/padding"
            android:text="@string/Details_movies_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red_logo"
            android:contentDescription="@string/content_button_watch_now"
            android:fontFamily="@font/font_text_alice"
            android:text="@string/button_watch_now"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_details_movies" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
